# maym

./: Cargo.toml  build.rs
.github/workflows/: action.yml
src/: cache.rs  cli.rs  config.rs  discord.rs  main.rs  mpris.rs  player.rs  queue.rs  state.rs  tui.rs  ui.rs
src/ui/: popup.rs  utils.rs  window.rs
