[package]
name = "maym"
version = "0.1.0"
edition = "2024"

[dependencies]
camino = { version = "1.1.10", features = ["serde1"] }
color-eyre = { version = "0.6.5", default-features = false, features = ["track-caller"] }
cpal = { version = "0.16.0", default-features = false, features = ["audio_thread_priority"] }
creek = { version = "1.2.2", default-features = false, features = ["decode", "decode-mp3"] }
crossterm = "0.28.1"
dirs = "6.0.0"
id3 = { version = "1.16.3", default-features = false }
itertools = "0.14.0"
rand = "0.9.1"
ratatui = "0.29.0"
rtrb = "0.3.2"
rubato = { version = "0.16.2", default-features = false }
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
unicase = "2.8.1"

[profile.dev]
opt-level = 1

[profile.release]
lto = "fat"
